# ITKPerformanceBenchmarking

./: .gitignore  CMakeLists.txt  asv.conf.json  environment.yml  itk-module.cmake  package.json  pnpm-lock.yaml
benchmarks/: core.py
examples/: CMakeLists.txt
examples/Core/: CMakeLists.txt  thread-overhead.cxx
include/: PerformanceBenchmarkingUtilities.h
src/: PerformanceBenchmarkingInformation.cxx.in  PerformanceBenchmarkingInformation.h.in  PerformanceBenchmarkingUtilities.cxx  itkHighPriorityRealTimeClock.cxx  jsonxx.cc
wasm/python/itkwasm-performance-benchmarks/: README.md  pyproject.toml
wasm/python/itkwasm-performance-benchmarks-emscripten/: README.md  pyproject.toml
wasm/python/itkwasm-performance-benchmarks-emscripten/itkwasm_performance_benchmarks_emscripten/: __init__.py  js_package.py  thread_overhead_async.py
wasm/python/itkwasm-performance-benchmarks-emscripten/test/: test_itkwasm_performance_benchmarks.py
wasm/python/itkwasm-performance-benchmarks-itk-python/: README.md  pyproject.toml
wasm/python/itkwasm-performance-benchmarks-itk-python/itkwasm_performance_benchmarks_itk_python/: __init__.py  thread_overhead.py
wasm/python/itkwasm-performance-benchmarks-itk-python/tests/: test_thread_overhead.py
wasm/python/itkwasm-performance-benchmarks-wasi/: README.md  pyproject.toml
wasm/python/itkwasm-performance-benchmarks-wasi/itkwasm_performance_benchmarks_wasi/: __init__.py  thread_overhead.py
wasm/python/itkwasm-performance-benchmarks-wasi/itkwasm_performance_benchmarks_wasi/wasm_modules/: thread-overhead.wasi.wasm
wasm/python/itkwasm-performance-benchmarks-wasi/tests/: test_thread_overhead.py
wasm/python/itkwasm-performance-benchmarks/docs/: conf.py  index.md
wasm/python/itkwasm-performance-benchmarks/itkwasm_performance_benchmarks/: __init__.py  thread_overhead.py  thread_overhead_async.py
wasm/python/itkwasm-performance-benchmarks/tests/: test_thread_overhead.py
wasm/typescript/: package.json
