[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "itkwasm-performance-benchmarks-itk-python"
readme = "README.md"
license = "Apache-2.0"
dynamic = ["version"]
description = "Benchmark ITK performance."
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: C++",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
keywords = [
  "itkwasm",
  "webassembly",
]

requires-python = ">=3.8"
dependencies = [
    "itkwasm >= 1.0.b171",
    "importlib_resources",

]

[tool.hatch.version]
path = "itkwasm_performance_benchmarks_itk_python/_version.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
]

[project.urls]
Home = "https://github.com/InsightSoftwareConsortium/ITKPerformanceBenchmarking"
Source = "https://github.com/InsightSoftwareConsortium/ITKPerformanceBenchmarking"

[tool.hatch.envs.default.scripts]
test = "pytest"


[tool.hatch.build]
exclude = [
  "/examples",
]
