[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "itkwasm-performance-benchmarks"
readme = "README.md"
license = "Apache-2.0"
dynamic = ["version"]
description = "Benchmark ITK performance."
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: C++",
  "Environment :: WebAssembly",
  "Environment :: WebAssembly :: Emscripten",
  "Environment :: WebAssembly :: WASI",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
keywords = [
  "itkwasm",
  "webassembly",
  "wasi",
  "emscripten",
]

requires-python = ">=3.8"
dependencies = [
    "itkwasm >= 1.0.b171",
    "itkwasm-performance-benchmarks-wasi; sys_platform != \"emscripten\"",
    "itkwasm-performance-benchmarks-emscripten; sys_platform == \"emscripten\"",

]

[tool.hatch.version]
path = "itkwasm_performance_benchmarks/_version.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
]

[project.urls]
Home = "https://github.com/InsightSoftwareConsortium/ITKPerformanceBenchmarking"
Source = "https://github.com/InsightSoftwareConsortium/ITKPerformanceBenchmarking"

[tool.hatch.envs.default.scripts]
test = "pytest"


[tool.hatch.build]
exclude = [
  "/examples",
]
